# BioRLHF

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPARISON_REPORT.md  CONTRIBUTING.md  LICENSE  README.md  comparison_results.json  create_expanded_sft_dataset.py  create_sft_dataset.py  create_sft_dataset_expanded.py  dpo_train.py  kmp_sft_advanced.json  kmp_sft_dataset.json  kmp_sft_expanded.json  pyproject.toml  requirements.txt  run_sft.sh  setup_cayuga.sh  sft_train.py  sft_train_fixed.py  sft_train_v2.py
.github/workflows/: ci.yml
configs/: grpo_full.json  grpo_full_v2.json  grpo_mve.json  grpo_phase4.json  grpo_phase4_ablation_legacy.json  grpo_phase4_ablation_matchv1.json
data/: kmp_dpo_preferences.json  kmp_sft_final.json  kmp_test_set.json
examples/: evaluate_model.py  quickstart.py  train_sft.py
results/: grpo_full_v2_eval_20260324_130106.json  grpo_mve_eval_20260321_063358.json  grpo_phase4_ablation_legacy_eval_20260403.json  grpo_phase4_ablation_matchv1_eval_20260403.json  grpo_phase4_eval_20260401_044833.json
scripts/: HPC_TRAINING_GUIDE.md  analyze_eval.py  deploy_to_cayuga.sh  evaluate_ecosystem_model.py  evaluate_grpo.py  merge_training_data.py  run_eval_grpo.sh  run_evaluation.sh  run_grpo_full.sh  run_grpo_mve.sh  run_grpo_phase4.sh  run_grpo_phase4_ablation.sh  setup_cayuga_grpo.sh  train_ecosystem_improved.sh
src/biorlhf/: __init__.py  cli.py
src/biorlhf/data/: __init__.py  dataset.py  genelabloader.py  ground_truth.py  grpo_dataset.py  question_generator.py
src/biorlhf/evaluation/: __init__.py  calibration.py  evaluate.py
src/biorlhf/training/: __init__.py  dpo.py  grpo.py  sft.py
src/biorlhf/utils/: __init__.py  model_utils.py
src/biorlhf/verifiers/: __init__.py  base.py  composer.py  consistency.py  factual.py  pathway.py  uncertainty.py
tests/: __init__.py  test_dataset.py  test_ground_truth.py  test_package.py
